--- a/Rules.html
+++ b/Rules.html
@@ -3,8 +3,6 @@
 <head>
 	<title>Rules</title>
 	<link rel="stylesheet" href="rules.css">
-	<style type="text/css">
-	</style>
 </head>
 
 <body>
@@ -15,7 +13,7 @@
 </section>
 <section id = game>
 	<div id= "section2">
-		<button>Join Game</button>
+		<a class="btn-red" href="trails.html"> Join Game</a>
 	</div>
 </section>
 <section id = rule>
@@ -26,7 +24,8 @@
 <br></br><p> <b>3.</b> Once you have completed your challenge, you must take a selfie of you completing <br></br>the task and submit it to Truth or Travel.<br></br> This is your way of checking of your task.</p> 
 <br></br><p> <b>4.</b>Enjoy! The purpose of Truth or Travel is to encourage travel while also diversifying your experience.</p> 
 <img src="selfie.jpg">
-<button id = button style="position: relative; top: 30px;"> Explore!</button>
+
+<a class="btn-red" href="trails.html" style="position:relative; top: 100px;"> Explore!</a>
 </section> 
 </body>
 </html>
